--- a/.config
+++ b/.config
@@ -438,6 +438,9 @@ CONFIG_CONSOLE_EARLYSUSPEND=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_NET=y
 
+
+
+
 #
 # Networking options
 #
@@ -481,6 +484,9 @@ CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NETFILTER=y
 # CONFIG_NETFILTER_DEBUG is not set
 CONFIG_NETFILTER_ADVANCED=y
+CONFIG_IP_FILTER=y
+CONFIG_FAST_DORMANCY=y
+
 
 #
 # Core Netfilter Configuration
