update sensor drivers, thanks roggin

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.29.6
-# Sat Feb 26 00:42:20 2011
+# Sun Feb 27 20:56:10 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -850,6 +850,8 @@ CONFIG_ANDROID_PMEM_KAPI_TEST=m
 # CONFIG_TSIF is not set
 CONFIG_APANIC=y
 CONFIG_APANIC_PLABEL="kpanic"
+CONFIG_INPUT_YAS529=y
+CONFIG_INPUT_YAS529_POSITION=5
 # CONFIG_C2PORT is not set
 
 #
@@ -993,6 +995,7 @@ CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 CONFIG_INPUT_KEYCHORD=y
 # CONFIG_BMA150 is not set
+CONFIG_INPUT_SMB380=y
 
 #
 # Hardware I/O ports
@@ -1093,7 +1096,7 @@ CONFIG_I2C_MSM=y
 # CONFIG_SENSORS_MT9T013 is not set
 CONFIG_AVR=y
 CONFIG_MS3C=y
-CONFIG_BOSCH_SMB380=y
+# CONFIG_BOSCH_SMB380 is not set
 CONFIG_SENSORS_ISL29018=y
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
@@ -1674,7 +1677,13 @@ CONFIG_EXT2_FS_XATTR=y
 # CONFIG_EXT2_FS_SECURITY is not set
 # CONFIG_EXT2_FS_XIP is not set
 # CONFIG_EXT3_FS is not set
-# CONFIG_EXT4_FS is not set
+CONFIG_EXT4_FS=m
+# CONFIG_EXT4DEV_COMPAT is not set
+CONFIG_EXT4_FS_XATTR=y
+# CONFIG_EXT4_FS_POSIX_ACL is not set
+# CONFIG_EXT4_FS_SECURITY is not set
+CONFIG_JBD2=m
+# CONFIG_JBD2_DEBUG is not set
 CONFIG_FS_MBCACHE=y
 # CONFIG_REISERFS_FS is not set
 # CONFIG_JFS_FS is not set
